@@ -5,6 +5,8 @@ Next version (not yet released)
  * [Enterprise] When running a Rails app in multithreaded mode, Passenger Enterprise automatically tags Rails logs with the current thread number. This makes it possible to distinguish logs generated by different threads.
  * Fixes permissions issue on Linux when setting OOM score after lowering privileges. Closes GH-1858.
  * [Standalone] Allows raw json envvars in Passengerfile.json. Closes GH-1837.
+ * Fixes an issue where passenger-config couldn't restart and app if the TMPDIR variable was set to /tmp
+
 
 Release 5.0.30
 --------------
